# ticket-triage-ops-env

./: .gitignore  PROJECT_EXPLANATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
envfoundry_ticket_triage/: __init__.py  cli.py  dynamics.py  env.py  spaces.py  utils.py
envfoundry_ticket_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_determinism.py  test_spaces.py  test_step_contract.py
